# sdl-ping-pong

./: .gitignore  CMakeLists.txt  README.md
libs/: setup.ps1
msvc/: sdl-ping-pong.sln  sdl-ping-pong.vcxproj  sdl-ping-pong.vcxproj.filters
src/: logic.c  logic.h  main.c  main.cpp.example  render.c  render.h
